# DecodeLabs

./: .gitignore  README.md  password_strength_checker.py
docs/: architecture.md  internship_report.md
src/encryption_tool/: __init__.py  cli.py
task-01/task-1/: README.md
task-01/task-1/tests/: test_password_strength_checker.py
task-02/: LICENSE  README.md  pyproject.toml  requirements.txt
task-02/src/encryption_tool/: caesar.py  file_crypto.py
tests/: test_caesar.py
