[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "basic-encryption-decryption"
version = "0.1.0"
description = "Educational Caesar Cipher encryption and decryption toolkit."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Sai Srikaran" }
]

[project.scripts]
encryption-tool = "encryption_tool.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
